넥사크로 UI 파일 generate 파일

--- a/rng-demo/src/main/resources/static/_resource_/_theme_/nxui/theme_runtime.css
+++ b/rng-demo/src/main/resources/static/_resource_/_theme_/nxui/theme_runtime.css
@@ -361,12 +361,12 @@
 .Button.btn_SA_collapse
 {
 	border : 0px none;
-	background : url("./../../../_resource_/_images_/btn_SA_collapse.png") no-repeat center;
+	background : url("./images/btn_SA_collapse.png") no-repeat center;
 }
 .Button.btn_SA_expand
 {
 	border : 0px none;
-	background : url("./../../../_resource_/_images_/btn_SA_expand.png") no-repeat center;
+	background : url("./images/btn_SA_expand.png") no-repeat center;
 }
 .Button.btn_Block
 {
@@ -638,7 +638,7 @@
 }
 .Static.sta_TF_logo
 {
-	background : url("./../../../_resource_/_images_/logo.png") no-repeat center;
+	background : url("./images/logo.png") no-repeat center;
 	cursor : pointer;
 }
 .Static.sta_TF_breadcrumb .nexacontentsbox
@@ -655,7 +655,7 @@
 }
 .Static.sta_TF_alarm
 {
-	background : url("./../../../_resource_/_images_/sta_TF_alarm.png") no-repeat center;
+	background : url("./images/sta_TF_alarm.png") no-repeat center;
 }
 .Static.sta_Guide
 {
@@ -732,7 +732,7 @@
 }
 .Static.sta_txt_descDot
 {
-	background : url("./../../../_resource_/_images_/sta_txt_descDot.png") no-repeat left center;
+	background : url("./images/sta_txt_descDot.png") no-repeat left center;
 }
 .Static.sta_WF_pageTitle
 {
@@ -781,7 +781,7 @@
 .Static.sta_DA_label_req
 {
 	border : 1px solid #ecebeb;
-	background : #f6f7f9 url("./../../../_resource_/_images_/essential.png") no-repeat left top;
+	background : #f6f7f9 url("./images/essential.png") no-repeat left top;
 }
 .Static.sta_DA_labelTop
 {
@@ -791,7 +791,7 @@
 .Static.sta_DA_labelTop_req
 {
 	border : 1px solid #dbdddf;
-	background : #eaecef url("./../../../_resource_/_images_/essential.png") no-repeat left top;
+	background : #eaecef url("./images/essential.png") no-repeat left top;
 }
 .Static.sta_DA_data
 {
@@ -801,30 +801,30 @@
 .Static.sta_WF_title1
 {
 	font : 15px/normal "NotoKR-Bold";
-	background : url("./../../../_resource_/_images_/sta_WF_title1.png") no-repeat left center;
+	background : url("./images/sta_WF_title1.png") no-repeat left center;
 }
 .Static.sta_WF_title2
 {
 	font : 15px/normal "NotoKR-Bold";
-	background : url("./../../../_resource_/_images_/sta_WF_title2.png") no-repeat left center;
+	background : url("./images/sta_WF_title2.png") no-repeat left center;
 }
 .Static.sta_WF_title3
 {
 	font : 14px/normal "NotoKR-Bold";
-	background : url("./../../../_resource_/_images_/sta_WF_title3.png") no-repeat left center;
+	background : url("./images/sta_WF_title3.png") no-repeat left center;
 }
 .Static.sta_WF_title4
 {
 	font : 14px/normal "NotoKR-Bold";
-	background : url("./../../../_resource_/_images_/sta_WF_title4.png") no-repeat left center;
+	background : url("./images/sta_WF_title4.png") no-repeat left center;
 }
 .Static.sta_WF_help
 {
-	background : url("./../../../_resource_/_images_/sta_WF_help.png") no-repeat left center;
+	background : url("./images/sta_WF_help.png") no-repeat left center;
 }
 .Static.sta_WF_singleLabel
 {
-	background : url("./../../../_resource_/_images_/sta_WF_singleLabel.png") no-repeat left center;
+	background : url("./images/sta_WF_singleLabel.png") no-repeat left center;
 }
 .Tab .prevbuttonTab
 {
@@ -1533,20 +1533,20 @@
 }
 .Grid .head .row .cell.cell_req
 {
-	background : url("./../../../_resource_/_images_/essential.png") no-repeat left top;
+	background : url("./images/essential.png") no-repeat left top;
 }
 .Grid .head .row .cell.cell_req_fix
 {
-	background : url("./../../../_resource_/_images_/essential.png") no-repeat left top;
+	background : url("./images/essential.png") no-repeat left top;
 	border : 1px solid #dddddd, 2px solid #707070, 1px solid #dddddd, 1px solid #dddddd;
 }
 .Grid .head .row .cell.cell_select
 {
-	background : url("./../../../_resource_/_images_/select.png") no-repeat left top;
+	background : url("./images/select.png") no-repeat left top;
 }
 .Grid .head .row .cell.cell_select_fix
 {
-	background : url("./../../../_resource_/_images_/select.png") no-repeat left top;
+	background : url("./images/select.png") no-repeat left top;
 	border : 1px solid #dddddd, 2px solid #707070, 1px solid #dddddd, 1px solid #dddddd;
 }
 .Grid .body .row .cell
@@ -1988,12 +1988,12 @@
 .Button.btn_SA_collapse[status=mouseover]
 {
 	border : 0px none;
-	background : url("./../../../_resource_/_images_/btn_SA_collapse_O.png") no-repeat center;
+	background : url("./images/btn_SA_collapse_O.png") no-repeat center;
 }
 .Button.btn_SA_expand[status=mouseover]
 {
 	border : 0px none;
-	background : url("./../../../_resource_/_images_/btn_SA_expand_O.png") no-repeat center;
+	background : url("./images/btn_SA_expand_O.png") no-repeat center;
 }
 .Button.btn_Block[status=mouseover]
 {
@@ -3057,12 +3057,12 @@
 .Button.btn_SA_collapse[userstatus=pushed]
 {
 	border : 0px none;
-	background : url("./../../../_resource_/_images_/btn_SA_collapse_P.png") no-repeat center;
+	background : url("./images/btn_SA_collapse_P.png") no-repeat center;
 }
 .Button.btn_SA_expand[userstatus=pushed]
 {
 	border : 0px none;
-	background : url("./../../../_resource_/_images_/btn_SA_expand_P.png") no-repeat center;
+	background : url("./images/btn_SA_expand_P.png") no-repeat center;
 }
 .Button.btn_Block[userstatus=pushed]
 {
